<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.cards.CardsFragment">

    <data>
        <variable
            name="viewModel"
            type="com.example.hearthstoneapp.ui.cards.CardsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/searchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:onClick="@{() -> viewModel.searchButton()}"
            android:text="@string/search"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/searchCardsTextView"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/searchCardsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:visibility="gone"
            android:hint="@string/search_cards"
            android:inputType="text"
            android:minHeight="48dp"
            android:onTextChanged="@{(text, start, before, count) -> viewModel.updateSearch(text)}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameClass" />

        <TextView
            android:id="@+id/nameClass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Class Name"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cardList"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchCardsTextView"
            tools:listitem="@layout/list_cards"
            android:visibility="gone"
            tools:visibility="visible"/>

        <TextView
            android:id="@+id/cardNotFound"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchCardsTextView"
            android:text="@string/card_not_found"
            android:gravity="center"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/imgLoading"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:foregroundGravity="center"
            android:src="@drawable/loading_animation"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchCardsTextView"
            tools:visibility="gone"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>